--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
   <title>test</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
+    }
 
+    canvas {
+      display: block;
+      margin: 0 auto;
+      padding: 0;
     }
   </style>
 </head>
